fix: menupage width and overflow

--- a/src/components/common/Menu/MenuPage/MenuPage.module.scss
+++ b/src/components/common/Menu/MenuPage/MenuPage.module.scss
@@ -1,7 +1,7 @@
 .menuPage {
-  position: absolute;
+  position: fixed;
   top: 0;
-  left: 0;
+  right: 0;
   width: 100%;
   height: 100%;
 
@@ -12,16 +12,20 @@
     background-color: rgba(#fff, 0.8);
   }
 }
+
 .show {
+  display: var(--display-menu, block);
   animation: slideInMenu 0.4s ease-in-out forwards;
 }
+
 .hide {
+  display: var(--display-menu, hide);
   animation: slideOutMenu 0.4s ease-in-out forwards;
 }
 
 @keyframes slideInMenu {
   0% {
-    display: block;
+    --display-menu: block;
     opacity: 0;
     transform: translateX(100%);
   }
@@ -37,7 +41,7 @@
     transform: translateX(0);
   }
   100% {
-    display: none;
+    --display-menu: none;
     opacity: 0;
     transform: translateX(100%);
   }
